--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=be
 
 # DATABASE Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/hopestar_store_dev
+spring.datasource.url=jdbc:mysql://root:WYQaQYAaQOUSoYHZpXeQLqFxQmITyvdR@nozomi.proxy.rlwy.net:59939/railway
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=WYQaQYAaQOUSoYHZpXeQLqFxQmITyvdR
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
