--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=be
 
 # DATABASE Configuration
-spring.datasource.url=jdbc:mysql://root:WYQaQYAaQOUSoYHZpXeQLqFxQmITyvdR@nozomi.proxy.rlwy.net:59939/railway
+spring.datasource.url=jdbc:mysql://root:WYQaQYAaQOUSoYHZpXeQLqFxQmITyvdR@nozomi.proxy.rlwy.net:59939/hopestar_store_dev
 spring.datasource.username=root
 spring.datasource.password=WYQaQYAaQOUSoYHZpXeQLqFxQmITyvdR
 spring.jpa.show-sql=true
